--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
         // Função para enviar o carrinho pelo WhatsApp
         function sendCartToWhatsApp() {
-            const phoneNumber = "55<NUMERO_DO_DESTINATARIO>"; // Coloque o número do destinatário aqui com o código do país (sem espaços ou símbolos)
+            const phoneNumber = "5561996518333"; // Coloque o número do destinatário aqui com o código do país (sem espaços ou símbolos)
             let message = "Carrinho de Compras:\n\n";
 
             // Adiciona os itens do carrinho na mensagem
