--- a/dashboard.html
+++ b/dashboard.html
@@ -39,28 +39,23 @@
             background-color: #c82333;
         }
 
-        video {
-            width: 600px;
-            max-width: 100%;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        #videoPlayer {
+        .video-container_video {
+            /* Largura parecida com a do YouTube */
+            max-width: 1280px;
+            margin: 0 auto;
+            /* Centraliza na tela */
             position: relative;
-        }
-        
-        #overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            display: none;
-            z-index: 10;
+            padding-bottom: 56.25%;
+            /* Mantém a proporção 16:9 */
+            height: 0;
         }
 
+        .video {
+            width: 800px;
+            height: 500px;
+            border-radius: 8px;
+            /* Cantos levemente arredondados como no YouTube */
+        }
     </style>
 </head>
 
@@ -70,11 +65,13 @@
         <h2>Bem-vindo, <span id="username"></span>!</h2>
         <p>Você está logado!</p>
 
-        <!-- Vídeo protegido -->
-        <video id="videoPlayer" width="560" height="315" controls controlsList="nodownload" preload="auto">
-            <source src="./videos/refrigeração.mkv" type="video/mp4">
-            Seu navegador não suporta o elemento de vídeo.
-        </video>
+        <div class="container_video">
+            <iframe class="video"
+                src="https://player.vimeo.com/video/1069341859?h=b3dcaf1f4a&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
+                title="refrigeração"></iframe>
+        </div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
 
 
 
